--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -127,7 +127,9 @@ Lediglich die mit BPMN erstellten Prozessmodelle können mit minimal relevanten 
 
 
 Bei Untersuchung der \textit{Klarheit} lässt sich feststellen, dass sich die Anzahl der Sequenzflusselemente/Existenz Constraints zwischen BPMN (26) und ConDec (7) unterscheidet. Ebenfalls gibt es eine Differenz bei der Anzahl der Gateways (6)/Constraints (13) und der Anzahl der unterschiedlichen Gateways (2)/Constraints (4) zwischen BPMN und ConDec. BPMN weist insgesamt eine höhere Anzahl an Elementen (44) auf als ConDec (32).\newline
-Wie in Kapitel 4 bereits erwähnt, kann sich eine größere Anzahl an Gateways/Constraints negativ auf die Verständlichkeit auswirken. Hier ist die Anzahl bei ConDec mehr als doppelt so hoch wie bei BPMN. In BPMN werden insgesamt zwei verschiedene Gateways (ein exklusives Gateway und ein paralleles Gateway) verwendet zur Darstellung von Verzweigungen. In ConDec werden vier verschiedene Constraints zur Darstellung genutzt. Da das Verständnis der Constraints in ConDec an sich relativ schwierig ist, ist das Verständnis eines Prozessmodelles mit vielen verschiedenen Constraints relativ schwer. Zudem existiert im ConDec Modell keine eindeutige Start Aktivität, welche durch das Init-Constraint markiert ist. Dies liegt daran, dass mehrere Aktivitäten als Einstiegsaktivität in Frage kommen. Da die möglichen Einstiegsaktivitäten jedoch nicht auf den ersten Blick ersichtlich sind. Dies steigert die Komplexität des ConDec Modelles. Da zudem die Anzahl der unterschiedlichen Constraints hier bei ConDec doppelt so hoch ist wie die Anzahl der Gateways bei BPMN und das mit ConDec modellierte Prozessmodell dadurch sehr viel komplexer ist, als das mit BPMN modellierte Prozessmodell, ist hier BPMN trotz der höheren Anzahl an Elementen insgesamt das verständlichere Modell.\newline
+Wie in Kapitel 4 bereits erwähnt, kann sich eine größere Anzahl an Gateways/Constraints negativ auf die Verständlichkeit auswirken. Hier ist die Anzahl bei ConDec mehr als doppelt so hoch wie bei BPMN. In BPMN werden insgesamt zwei verschiedene Gateways (ein exklusives Gateway und ein paralleles Gateway) verwendet zur Darstellung von Verzweigungen. In ConDec werden vier verschiedene Constraints zur Darstellung genutzt. Da das Verständnis der Constraints in ConDec an sich relativ schwierig ist, ist das Verständnis eines Prozessmodelles mit vielen verschiedenen Constraints relativ schwer. Zudem existiert im ConDec Modell keine eindeutige Start Aktivität, welche durch das Init-Constraint markiert ist. Dies liegt daran, dass mehrere Aktivitäten als Einstiegsaktivität in Frage kommen. Die möglichen Einstiegsaktivitäten sind jedoch nicht auf den ersten Blick ersichtlich. Dies steigert die Komplexität des ConDec Modelles. \newline
+Da das mit ConDec erstellte Modell sowohl mehr Constraints enthält als auch mehr unterschiedliche Constraints und keine eindeutige Startmarkierung enthält ist es hier das komplexere Modell. Denn das BPMN-Modell weißt nur im Hinblick auf die Anzahl von Sequenzflusselementen im Gegensatz zu Existenz-Constraints einen höheren Wert auf und damit an dieser Stelle auch eine höhere Komplexität. Da die Sequenzflusselemente jedoch allgemein einen geringeren geistigen Aufwand zum Verstehen erfordern, wiegen die höheren Zahlen bei Gateways/Cnstraints und Anzahl unterschiedlicher Gateway/Constraints beim ConDec Modell mehr und somit ist das BPMN-Modell das leichter verständlichere.
+\newline
 Somit ist hier BPMN in Bezug auf die \textit{Klarheit} geeigneter zum Modellieren als ConDec.\newline
 
 Die \textit{Wirtschaftlichkeit} unterscheidet sich bei den beiden Modellierungssprachen. Das mit BPMN erstellte Modell weist 26 Sequenzflusselemente auf und das mit ConDec erstellte Modell sieben Existenz Constraints. Bei ConDec hingegen werden mehr Constraints (13, 4 verschiedene) benötigt als Gateways (6, 2 verschiedene) bei BPMN. Bei BPMN müssen mehr Elemente (44) zum Modellieren des gleichen Sachverhaltes verwendet werden wie bei ConDec (32).  Die Tatsache, dass in ConDec vier unterschiedliche Constraints verwendet werden und in BPMN nur zwei unterschiedliche Gateways, macht den geistigen Aufwand für das Modellieren der beiden Prozesse in ConDec höher, als in BPMN. \newline
@@ -736,7 +738,7 @@ Die \textit{Relevanz} lässt sich nur bei BPMN einhalten, denn es ist wieder bei
 
 In Bezug auf die \textit{Klarheit} fällt gerade bei Betrachtung der Modelle der Phasen Inception, Elaboration, Construction und Transition auf, das bei Modellen, bei denen mehrere Aktivitäten parallel zueinander ablaufen, in BPMN deutlich mehr Elemente zur Darstellung des gleichen Sachverhaltes notwendig sind als in ConDec. Bei allen vier Modellen sind doppelt so viele, teilweise auch mehr als doppelt so viele Elemente zur Darstellung in BPMN notwendig als in ConDec. Dies liegt an der Anzahl der Sequenzflusselemente und Gateways. BPMN weist eine hohe Anzahl an eingehenden und ausgehenden Kanten an den parallelen Gateways auf. Da die Parallelität in ConDec nicht durch Constraints dargestellt werden muss, werden in ConDec nur die Existenz-Constraints benötigt, um die Aktivitäten auf einmalige Ausführung zu beschränken. Weil sich die hohe Anzahl an Elementen in BPMN negativ auf die Verständlichkeit auswirken kann und in ConDec nur die leicht verständlichen Existenz-Constraints verwendet werden, sind die ConDec-Modelle zur Darstellung von parallelen Abläufen die leichter verständlichen Modelle. \newline
 Das Gleiche gilt für die Darstellung der Phasen des Open UP. Hier werden zur Darstellung des Prozesses in BPMN dreimal so viele Elemente benötigt wie in ConDec. Dies liegt hier an der hohen Anzahl der XOR-Gateways, die beim Modellieren des Prozesses notwendig sind. Somit ist auch hier das Modell, welches mit ConDec erstellt wurde, das leichter verständlichere. \newline
-Beim Prozess Lösungsinkrement entwickeln werden bei BPMN mehr als doppelt so viele Elemente benötigt wie bei ConDec. Es werden fünf Gateways in BPMN verwendet und bei ConDec werden sechs Constraints benötigt. Bei ConDec werden drei verschiedene Constraints verwendet, bei BPMN jedoch keine verschiedenen Gateways, sondern immer nur das XOR- Gateway. Dies erhöht die Komplexität im Gegensatz zum BPMN-Modell deutlich. Im BPMN Modell ist der Startpunkt durch das Startzeichen gekennzeichnet. ConDec Modell kann kein eindeutiger Start im Modell angegeben werden, da mehrere Aktivitäten als Start infrage kommen. Dies erhöht die Komplexität des ConDec Modells ebenfalls, da die Aktivitäten, mit welchen gestartet werden kann nicht auf einen Blick erkennbar sind. Daher kann zusammenfassend gesagt werden, dass die Komplexität des ConDec Modells leicht höher ist, da BPMN zwar deutlich mehr Elemente insgesamt aufweist, die Kombination von drei verschiedenen Constraints und das fehlende Startsymbol das ConDec-Modell leicht komplexer machten als das BPMN Modell.\newline
+Beim Prozess Lösungsinkrement entwickeln werden bei BPMN mehr als doppelt so viele Elemente benötigt wie bei ConDec. Dies liegt an den vielen Sequenzflusselementen, welche im BPMN-Modell benötigt werden. Es werden fünf Gateways in BPMN verwendet und bei ConDec werden sechs Constraints benötigt. Bei ConDec werden drei verschiedene Constraints verwendet, bei BPMN jedoch keine verschiedenen Gateways, sondern immer nur das XOR- Gateway. Dies erhöht die Komplexität des ConDec-Modelles im Gegensatz zum BPMN-Modell. Im BPMN Modell ist der Startpunkt durch das Startzeichen gekennzeichnet. Beim ConDec Modell kann kein eindeutiger Start im Modell angegeben werden, da mehrere Aktivitäten als Start infrage kommen. Dies erhöht die Komplexität des ConDec Modells ebenfalls, da die Aktivitäten, mit welchen gestartet werden kann nicht auf einen Blick erkennbar sind. Daher kann zusammenfassend gesagt werden, dass die Komplexität des ConDec Modells leicht höher ist. BPMN weist zwar mehr Elemente insgesamt auf, jedoch liegt das an den Sequenzflusselementen, für deren Verständnis ein geringer geistiger Aufwand notwendig ist. Die Kombination von drei verschiedenen Constraints und das fehlende Startsymbol machen das ConDec-Modell leicht komplexer als das BPMN Modell.\newline
 Im Prozess Iteration planen und managen gibt es keine Verzweigungen. In ConDec werden sieben Constraints zur Darstellung verwendet. Die Anzahl der Elemente insgesamt ist bei beiden Modellen ungefähr gleich groß (ein Elemente mehr bei BPMN). Auf Grund der geringeren Komplexität des mit BPMN erstellten Modelles, da dort keine Gateways eingesetzt werden müssen, ist dieses das verständlichere.\newline
 Bei den Prozessen Anforderungen identifizieren und verfeinern und Produktdokumentation entwickeln weisen die ConDec-Modelle eine leicht höhere Anzahl an Elementen insgesamt auf. Außerdem werden hier auch in ConDec jeweils drei Constraints verwendet und in BPMN keine Gateways. Dies macht die ConDec-Modelle komplexer als die BPMN-Modelle, weswegen die mit BPMN erstellten Modelle verständlicher sind.\newline
 Beim Prozess Release deployen werden fast gleich viele Elemente in ConDec, wie auch in BPMN zur Darstellung des Prozesses benötigt (ein Element mehr in BPMN). In ConDec werden insgesamt fünf Constraints (drei verschiedene) zur Darstellung des Sachverhaltes benötigt, in BPMN nur zwei Gateways. Somit liegt hier das BPMN-Modell in Bezug auf die Komplexität unter dem ConDec-Modell und ist somit das verständlichere.\newline
@@ -1114,23 +1116,23 @@ Abbildung \ref{fig:TabelleVModell} gibt nochmal eine zusammenfassende Übersicht
 \end{figure}
 
 
-\section{Vergleich insgesamt}
+\section{Übergreifender Vergleich}
 
-BPMN und ConDec können die syntaktische \textit{Richtigkeit} bei allen Modellen einhalten, da in beiden Modellierungssprachen die Notationsregeln bei der Modellierung der Metamodelle eingehalten werden können, um das dort beschriebene Verhalten korrekt wieder zu geben. Somit sind in bezug auf die syntaktische \textit{Richtigkeit} beide Prozessmodellierungssprachen gleich geeignet.\newline
-Die semantische \textit{Richtigkeit} kann von ConDec in Bezug auf die visuelle Darstellung von Rollen und Artefakten im Prozessmodell selbst bei keinem Modell eingehalten werden, bei welchem solche Informationen notwendig wären. Die Grenzen der Darstellbarkeit von ConDec  werden hier erreicht. Da Rollen und Artefakte jedoch für das insgesamte Verständnis eines Prozessmodelles sehr wichtige Elemente sind, ist BPMN in Hinsicht auf die semantische \textit{Richtigkeit} die geeignetere Sprache zum Modellieren.  \newline
+BPMN und ConDec können die syntaktische \textit{Richtigkeit} bei allen Modellen einhalten, da in beiden Modellierungssprachen die Notationsregeln bei der Modellierung der Metamodelle eingehalten werden können, um das dort beschriebene Verhalten korrekt wieder zu geben. Somit sind in Bezug auf die syntaktische \textit{Richtigkeit} beide Prozessmodellierungssprachen gleich geeignet.\newline
+Die semantische \textit{Richtigkeit} kann von ConDec in Bezug auf die visuelle Darstellung von Rollen und Artefakten im Prozessmodell selbst bei keinem Modell eingehalten werden, bei welchem solche Informationen notwendig wären. Die Grenzen der Darstellbarkeit von ConDec  werden erreicht. Da Rollen und Artefakte jedoch für das insgesamte Verständnis eines Prozessmodelles sehr wichtige Elemente sind, ist BPMN in Hinsicht auf die semantische \textit{Richtigkeit} die geeignetere Sprache zum Modellieren.  \newline
 
 
 Der  Grundsatz des \textit{systematischen Aufbaus} kann bei ConDec bei keinem Prozessmodell eingehalten werden, da niergendwo Artefakte visualisiert werden können. Da Artefakte jedoch für das Verständnis eines Modelles und die Darstellung von Schnittstellen sehr wichtige Elemente sind, ist BPMN in Hinsicht auf den \textit{systematischen Aufbau} die geeignetere Prozessmodellierungssprache. \newline
 
 
-Die \textit{Relevanz} kann ebenfalls nur von BPMN eingehalten werden, da sich die ConDec-Modelle nicht mit den minimal relevanten Informationen erstellen lassen. Auch hier ist das Problem wiederum die fehlende Visualisierungsmöglichkeit von Rollen und Artefakten. Somit ist auch hier BPMN die geeignetere Prozessmodellierungssprache.\newline
+Die \textit{Relevanz} kann ebenfalls nur von BPMN eingehalten werden, da sich die ConDec-Modelle nicht mit den minimal relevanten Informationen erstellen lassen. Auch ist das Problem wiederum die fehlende Visualisierungsmöglichkeit von Rollen und Artefakten. Somit ist auch hier BPMN die geeignetere Prozessmodellierungssprache.\newline
 
 Beim Grungsatz der \textit{Klarheit} gibt es Unterschiede bei der Eignung zwischen den beiden Prozessmodellierungssprachen abhängig vom abzubildenden Verhalten des Metamodelles. Hier weisen beide Modelle Stärken und Schwächen auf. \newline
-Bei der Darstellung von Metamodellen, bei denen viele Aktivitäten parallel ablaufen, wie z.B. bei den Phasen des Open UP benötigt BPMN deutlich mehr Elemente zur Darstellung, als ConDec. Auch sind in BPMN Gateways zur Darstellung notwendig, während bei ConDec lediglich leichter verständliche Existenz-Constraints eingestezt werden. Dies ist sowohl der Fall bei den kleineren Modellen (<fünf Aktivitäten), als auch bei den größeren Modellen(>=fünf Aktivitäten). Somit sind hier die BPMN Modelle komplexer als die ConDec Modelle und ConDec ist hierfür die geeignetere Prozessmodellierungssprache. \newline
-Ein anderes Bild zeichnet sich bei Prozessmodellen ab, bei welchen viele Verzweigungen oder aber auch Abläufe ohne Verzweigungen und Parallelität, also gerade Abläufe dargestellt werden müssen. Hier sind zwar bei BPMN oftmals auch mehr Elemente insgesamt zur Darstellung notwendig, jedoch werden bei BPMN bei der Darstellung von Abläufen ohne Verzweigung keine Gateways und bei der Darstellung von Abläufen mit vielen Verzweigungen auch maximal zwei verschiedene Gateways benötigt. ConDec braucht zur Darstellung von Abläufen ohne Verzweigung und Parallelität trotzdem Constraints, wenn auch wenig unterschiedliche Constraints. Zur Darstellung von Abläufen mit vielen Verzweigungen/Schleifen und auch eventuell noch gleichzeitig parallelen Abläufen werden bei ConDec viele unterschiedliche Constraints eingesetzt. Bei kleinen Modellen (< fünf Aktivitäten), wie z.B. beim Modell Phasen des Open UP ist ConDec das weniger komplexe Modell. Beim Prozess Lösungsinkrement entwickeln ist nur ein kleiner Unterschied in der Komplexität vorhanden. Bei größeren Modellen (>=fünf Aktivitäten) sind jedoch die ConDec Modelle deutlich komplexer. Dies lässt sich bei den Modellen Scrum sowie bei den bei den Modellen des V-Modell Systementwicklungsprojekt AG/AN und Inkrementelle Entwicklung durchführen erkennen. Hier müssen bei den ConDec Modellen vier bis sieben unterschiedliche Constraints zur Darstellung des Ablaufes verwendet werden. In BPMN hingegen werden bei diesen Modellen maximal zwei unterschiedliche Gateways verwendet. Daher ist hier bei Modellen mit mehr als fünf Aktivitäten und vielen Verzweigungen und eventuell noch parallelen Aktivitäten BPMN die geeignetere Modellierungssprache. Hingegen bei Prozessen mit vielen parallelen Aktivitäten ist ConDec besser zum Modellieren geeignet.\newline
+Bei der Darstellung von Metamodellen, bei denen viele Aktivitäten parallel ablaufen, wie z.B. bei den Phasen des Open UP, benötigt BPMN deutlich mehr Elemente zur Darstellung, als ConDec. Auch sind in BPMN Gateways zur Darstellung notwendig, während bei ConDec lediglich leichter verständliche Existenz-Constraints eingestezt werden. Dies ist sowohl der Fall bei den kleineren Modellen (<=fünf Aktivitäten), als auch bei den größeren Modellen(>fünf Aktivitäten). Somit sind die BPMN Modelle komplexer als die ConDec Modelle und ConDec ist hierfür die geeignetere Prozessmodellierungssprache. \newline
+Ein anderes Bild zeichnet sich bei Prozessmodellen ab, bei welchen viele Verzweigungen oder aber auch Abläufe ohne Verzweigungen und Parallelität, also gerade Abläufe dargestellt werden müssen. Hier sind zwar bei BPMN oftmals auch mehr Elemente insgesamt zur Darstellung notwendig, jedoch werden bei BPMN bei der Darstellung von Abläufen ohne Verzweigung keine Gateways und bei der Darstellung von Abläufen mit vielen Verzweigungen auch maximal zwei verschiedene Gateways benötigt. ConDec braucht zur Darstellung von Abläufen ohne Verzweigung und Parallelität trotzdem Constraints, wenn auch wenig unterschiedliche. Zur Darstellung von Abläufen mit vielen Verzweigungen/Schleifen und auch eventuell noch gleichzeitig parallelen Abläufen werden bei ConDec viele unterschiedliche Constraints eingesetzt. Bei kleinen Modellen (<= fünf Aktivitäten), wie z.B. beim Modell Phasen des Open UP ist ConDec das weniger komplexe Modell. Beim Prozess Lösungsinkrement entwickeln ist nur ein kleiner Unterschied in der Komplexität vorhanden. Bei größeren Modellen (>fünf Aktivitäten) sind jedoch die ConDec Modelle deutlich komplexer. Dies lässt sich bei den Modellen Scrum sowie bei den beiden Modellen des V-Modell Systementwicklungsprojekt AG/AN und Inkrementelle Entwicklung durchführen erkennen. Hier müssen bei den ConDec Modellen vier bis sieben unterschiedliche Constraints zur Darstellung des Ablaufes verwendet werden. In BPMN hingegen werden bei diesen Modellen maximal zwei unterschiedliche Gateways verwendet. Daher ist bei Modellen mit mehr als fünf Aktivitäten und vielen Verzweigungen und eventuell noch parallelen Aktivitäten BPMN die geeignetere Modellierungssprache. Hingegen bei Prozessen mit vielen parallelen Aktivitäten ist ConDec besser zum Modellieren geeignet.\newline
 
-Bei Betracht der \textit{Wirtschaftlichkeit} weisen beide Modellierungssprachen Stärken und Schwächen auf. Bei Modellen mit vielen parallelen Abläufen, wie z.B. den Phasen des Open UP müssen in BPMN mehr als doppelt so viele Elemente verwendet werden, wie bei ConDec, wodurch hier ein höherer Aufwand bei der Modellierung mit BPMN entsteht als bei ConDec.\newline
-Bei großen Modellen (>= fünf Aktivitäten) mit vielen Verzweigungen/Schleifen und noch dazu parallelen Aktivitäten werden bei ConDec sehr viel mehr Constraints bei der Modellierung benötigt, als Gateways bei BPMN. Aus diesem Grund ist bei diesen Modellen bei der Modelierung mit ConDec ein größerer geistiger Aufwand notwendig als bei BPMN und daher ist bei Modellen mit vielen Verzweigungen/Schleifen BPMN die geeignetere Modellierungssprache, wenn die \textit{Wirtschaftlichkeit} betrachtet wird.\newline
+Bei Betracht der \textit{Wirtschaftlichkeit} weisen beide Modellierungssprachen Stärken und Schwächen auf. Bei Modellen mit vielen parallelen Abläufen, wie z.B. den Phasen des Open UP müssen in BPMN mehr als doppelt so viele Elemente verwendet werden, wie bei ConDec, wodurch ein höherer Aufwand bei der Modellierung mit BPMN entsteht als bei ConDec.\newline
+Bei großen Modellen (>fünf Aktivitäten) mit vielen Verzweigungen/Schleifen und noch dazu parallelen Aktivitäten werden bei ConDec sehr viel mehr Constraints bei der Modellierung benötigt, als Gateways bei BPMN. Aus diesem Grund ist bei diesen Modellen bei der Modelierung mit ConDec ein größerer geistiger Aufwand notwendig als bei BPMN und daher ist bei Modellen mit vielen Verzweigungen/Schleifen BPMN die geeignetere Modellierungssprache, wenn die \textit{Wirtschaftlichkeit} betrachtet wird.\newline
 
 Bei allen Prozessen lässt sich durch Ausführung in den Modellierungstools Signavio und Declare das gleiche Ausführungsverhalten beobachten, wodurch hier die \textit{Vergleichbarkeit} gewährleistet ist. \newline
 Die Anzahl der Elemente in den Prozessmodellen unterscheidet sich teilweise. Bei BPMN werden bei vielen Prozessen deutlich mehr Elemente zur Darstellung des gleichen Sachverhaltes verwendet wie bei ConDec.\newline
