--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -1,6 +1,6 @@
 \chapter{Validierung}\label{sec:chapter7}
 
-In diesem Kapitel werden die Ergebnisse des Vergleichs der ConDec - und BPMN-Modelle aus Kapitel 5 mit Hilfe einer Studie validiert. Zunächst werden in Kapitel 6.1 die Forschungsfragen vorgestellt, welche mit dieser Studie beantwortet werden wollen. Diese stützen sich auf die Erkenntnisse aus Kapitel 5. Anschließend wird in Kapitel 5.2 das Design der Studie vorgestellt und in Kapitel 6.3 werden die Durchführung und die Ergebnisse der Studie beschrieben. Das Fazit der Studie befindet sich in Kapitel 6.4. \newline
+In diesem Kapitel werden die Ergebnisse des Vergleichs der ConDec - und BPMN-Modelle aus Kapitel 5 mit Hilfe einer Studie validiert. Zunächst werden in Kapitel 6.1 die Forschungsfragen vorgestellt, welche mit dieser Studie beantwortet werden sollen. Diese stützen sich auf die Erkenntnisse aus Kapitel 5. Anschließend wird in Kapitel 6.2 das Design der Studie vorgestellt und in Kapitel 6.3 werden die Durchführung und die Ergebnisse der Studie beschrieben. Das Fazit der Studie befindet sich in Kapitel 6.4. \newline
 
 
 \section{Forschungsfragen}
@@ -8,7 +8,7 @@ In diesem Kapitel werden die Ergebnisse des Vergleichs der ConDec - und BPMN-Mod
 \textbf{Richtigkeit}: 
 
 
-Hier soll geprüft werden, ob sich die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten negativ auf das Verständnis der Prozessmodelle auswirkt. Hierbei wird überprüft, ob Modelle, in den Rollen und/oder Artefakte vorkommen bei den deklarativen Modellen sehr viel schlechtere Punktzahlen herauskommen, als bei den imperativen Modellen.\newline
+Es soll geprüft werden, ob sich die fehlenden Visualisierungsmöglichkeiten von Rollen und Artefakten negativ auf das Verständnis der Prozessmodelle auswirkt. Dabei wird überprüft, ob Modelle, in den Rollen und/oder Artefakte vorkommen, bei den deklarativen Modellen sehr viel schlechtere Punktzahlen herauskommen, als bei den imperativen Modellen.\newline
 
 
 \textbf{Systematischer Aufbau}: 
@@ -23,16 +23,16 @@ Hier soll genau wie bei \textit{Richtigkeit} der Einfluß von Artefakten und Rol
 
 \textbf{Klarheit}: 
 
-Es soll allgemein die Verständlichkeit der imperativen und deklarativen Modelle untersucht werden, ob sich die Ergebnisse aus Kapitel 5 bestätigen, dass kleine Modelle (<= 5 Aktivitäten) mit Verzweigungen/Schleifen und große Modelle (> 5 Aktivitäten) mit Verzweigungen/Schleifen und Modelle mit geraden Verläufen von der BPMN- Gruppe stark besser verstanden werden, als von der ConDec- Gruppe, oder ob bei den Meinungsfragen die BPMN-Modelle bevorzugt werden. \newline
+Es soll allgemein die Verständlichkeit der imperativen und deklarativen Modelle untersucht werden, ob sich die Ergebnisse aus Kapitel 5 bestätigen, dass kleine Modelle (<= 5 Aktivitäten) mit Verzweigungen/Schleifen und große Modelle (> 5 Aktivitäten) mit Verzweigungen/Schleifen und Modelle mit geraden Verläufen von der BPMN- Gruppe wesentlich besser verstanden werden, als von der ConDec- Gruppe, oder ob bei den Meinungsfragen die BPMN-Modelle favorisiert werden. \newline
 Zudem soll getestet werden, ob bei Modellen mit vielen parallelen Verläufen die ConDec- Modelle besser verstanden werden oder bei den Meinungsfragen bevorzugt werden.
 
 \textbf{Wirtschaftlichkeit}: 
 
-Da im Rahmen dieser Studie von den Probanden keine Modelle erstellt werden lassen können, werden hier die gleichen Kriterien wie bei der \textit{Klarheit} zugrunde gelegt, da die Verständlichkeit der Nutzer auch ein gutes Maß für die Verständlichkeit der Modellierer ist. Denn wenn eine der beiden Modellierungssprachen deutlich schlechter verstanden wird, ist sie auch für Modellierer weniger geeignet, da diesen durch fehlende Verständlichkeit auch leichter Fehler beim Modellieren passieren.\newline
+Da im Rahmen dieser Studie von den Probanden keine Modelle erstellt werden lassen können, werden hier die gleichen Kriterien wie bei der \textit{Klarheit} zugrunde gelegt, da die Verständlichkeit der Nutzer auch ein gutes Maß für die Verständlichkeit der Modellierer ist. Denn wenn eine der beiden Modellierungssprachen deutlich schlechter verstanden wird, ist sie auch für Modellierer weniger geeignet, da diesen durch fehlende Verständlichkeit auch leichter Fehler beim Modellieren unterlaufen.\newline
 
 \textbf{Vergleichbarkeit}: 
 
-Untersucht wird hier, ob sich die Punktzahlen bei Modellen, bei denen es zwischen BPMN und ConDec Unterschiede in der Größe gibt auch Unterschiede in den Punktzahlen ergeben und wiederum sollen die Grenzen der Darstellbarkeit von ConDec (Rollen, Artefakte) in Bezug auf das Verständnis untersucht werden.\newline
+Untersucht wird hier, ob sich die Punktzahlen bei Modellen, bei denen es zwischen BPMN und ConDec Unterschiede in der Größe gibt, auch Unterschiede in den Punktzahlen ergeben und wiederum sollen die Grenzen der Darstellbarkeit von ConDec (Rollen, Artefakte) in Bezug auf das Verständnis untersucht werden.\newline
 
 
 \section{Design der Studie}
@@ -41,7 +41,7 @@ Abbildung \ref{fig:UmfrageStruktur} kann die Struktur der Umfrage entnommen werd
 Bei der Studie wurden zwei Fragebögen eingesetzt. Die 32 Teilnehmer der Studie wurden deswegen zufallsbedingt in zwei Gruppen (je 16 Personen) eingeteilt. Zunächst wurden den Probanden allgemeine demographische Fragen gestellt (Geschlecht, Alter, Hintergrundwissen zu imperativer und deklarativer Modellierung, Hintergrundwissen zu den Software Engineering Prozessmodellen Scrum, Open UP und V-Modell XT).\newline
 Anschließend wurden den Teilnehmern Verständnisfragen zu ausgewählten Modellen gestellt.
 Es wurden die vier  Modellpaare \textit{Lösungsinkrement entwickeln (Open UP)}, \textit{Scrum}, \textit{Systementwicklungsprojekt AG/AN} und \textit{Phasen Open UP -Inception}  aus Kapitel 5 ausgewählt. Hierbei wurde darauf geachtet, dass es sich um zwei kleine Modelle (<= 5 Aktivitäten) und zwei große Modelle (> 5 Aktivitäten) handelt. Gruppe 1 startete mit einem deklarativen Prozess und Gruppe 2 mit dem entsprechenden imperativen Prozess. Somit wurden von jeder Gruppe zwei imperative und zwei deklarative Prozesse bearbeitet.  \newline
-Im letzten Teil des Fragebogens wurden den Probanden noch vier Modellpaare direkt gegenüber gestellt und sie wurden nach Ihrem präferierten Modell (deklarativ oder imperativ) gefragt und mussten in einem Freitextfeld den Grund für Ihre Entscheidung angeben. Auch hier wurden den Teilnehmern wiederum zwei kleine (<= 5 Aktivitäten) und zwei große (> 5 Aktivitäten)  Modelle gezeigt. Hier wurden die Modelle \textit{System spezifizieren (V-Modell XT)}, \textit{Phasen des Open UP}, \textit{Inkrementelle Entwicklung durchführen (V-Modell XT)} und \textit{Release deployen} ausgewählt. \newline
+Im letzten Teil des Fragebogens wurden den Probanden noch vier Modellpaare direkt gegenüber gestellt und sie wurden nach ihrem präferierten Modell (deklarativ oder imperativ) gefragt und mussten in einem Freitextfeld den Grund für ihre Entscheidung angeben. Auch hier wurden den Teilnehmern wiederum zwei kleine (<= 5 Aktivitäten) und zwei große (> 5 Aktivitäten)  Modelle gezeigt. Es wurden die Modelle \textit{System spezifizieren (V-Modell XT)}, \textit{Phasen des Open UP}, \textit{Inkrementelle Entwicklung durchführen (V-Modell XT)} und \textit{Release deployen} ausgewählt. \newline
 Die semantische Gleichheit der Modellpaare wurde wie bereits in Kapitel 5 erwähnt durch das Testen von validen Pfaden durch die jeweiligen Modelle sichergestellt.\newline
 
 \begin{figure}[H]
@@ -59,17 +59,17 @@ Die Teilnehmer konnten bei der Beantwortung der Fragen zwischen vier Antwortmög
 
 \subsection{Umfragewerkzeug und Durchführung}
 
-Zur Durchführung wurde das Fragebogenwerkzeug \textit{Limesurvey} verwendet. Der entsprechende Link zum Fragebogen sowie eine kleine Legende zur Notationsübersicht von Declare und BPMN wurde den Teilnehmern per E-Mail zugeschickt. Die entsprechenden Antworten der Probanden wurden automatisch von \textit{Limesurvey} gespeichert. Weiterhin war es dort möglich die jeweilige Zeit, welche die Probanden zur Bearbeitung Verständnisfragen benötigt haben mit zu messen. Die gespeicherten Daten können aus \textit{Limesurvey} für verschiedene externe Anwendungen exportiert werden (z.B. Excel, CSV oder für SPSS).
+Zur Durchführung wurde das Fragebogenwerkzeug \textit{Limesurvey} verwendet. Der entsprechende Link zum Fragebogen sowie eine kleine Legende zur Notationsübersicht von Declare und BPMN wurde den Teilnehmern per E-Mail zugeschickt. Die entsprechenden Antworten der Probanden wurden automatisch von \textit{Limesurvey} gespeichert. Weiterhin war es dort möglich, die jeweilige Zeit, welche die Probanden zur Bearbeitung Verständnisfragen benötigt haben, mit zu messen. Die gespeicherten Daten können aus \textit{Limesurvey} für verschiedene externe Anwendungen exportiert werden (z.B. Excel, CSV oder für SPSS).
 
 \subsection{Auswertung}
 
-Für jede richtige Antwort wurde ein Punkt vergeben. Für jede falsche Antwort gab es null Punkte. Auch \textit{Unentschlossen} wurde als falsche Antwort gewertet. Die einzelnen Punkte wurden dann pro Frage aufsummiert, so dass ein maximaler wert Pro Frage von 1 möglich ist.
+Für jede richtige Antwort wurde ein Punkt vergeben. Für jede falsche Antwort gab es null Punkte. Auch \textit{Unentschlossen} wurde als falsche Antwort gewertet. Die einzelnen Punkte wurden dann pro Frage aufsummiert, so dass ein maximaler Wert pro Frage von 1 möglich war.
 
 \section{Durchführung der Studie}
 
 \subsection{Teilnehmer}
 
-Es wurden 32 Studenten und Doktoranden aus dem Bereich Informatik/Medieninformatik befragt. 12 Teilnehmer waren weiblich und 20 männlich (Abbildung \ref{fig:Geschlechterverteilung}). Die allgemeinen demographischen Daten der Probanden können Abbildung \ref{fig:TabelleAllgemeineDaten} entnommen werden. Diese hatten unterschiedliches Hintergrundwissen zum Thema Prozessmodellierung. Wie Abbildung \ref{fig:VerteilungImperativDeklarative} entnommen werden kann, hatten sieben Studienteilnehmer weder in imperativer noch in deklarativer Modellierung Erfahrung. 18 Probanden hatten nur in imperativer Modellierung Erfahrung, jedoch nicht in deklarativer und sieben weitere Teilnehmer hatten in beiden Modellierungssprachen Erfahrung. Die Versuchsobjekte wurden bewusst nach unterschiedlichem Hintergrundwissen zum Thema Prozessmodellierung ausgewählt um zu prüfen in wie fern sich die Ergebnisse bei den Verständnisfragen zwischen Personen mit viel und wenig Hintergrundwissen zum Thema Prozessmodellierung unterscheiden.\newline
+Es wurden 32 Studenten und Doktoranden aus dem Bereich Informatik/Medieninformatik befragt. 12 Teilnehmer waren weiblich und 20 männlich (Abbildung \ref{fig:Geschlechterverteilung}). Die allgemeinen demographischen Daten der Probanden können Abbildung \ref{fig:TabelleAllgemeineDaten} entnommen werden. Diese hatten unterschiedliches Hintergrundwissen zum Thema Prozessmodellierung. Wie Abbildung in \ref{fig:VerteilungImperativDeklarative} zu ersehen ist, hatten sieben Studienteilnehmer weder in imperativer noch in deklarativer Modellierung Erfahrung. 18 Probanden hatten nur in imperativer Modellierung Erfahrung, jedoch nicht in deklarativer und sieben weitere Teilnehmer hatten in beiden Modellierungssprachen Erfahrung. Die Versuchsobjekte wurden bewusst nach unterschiedlichem Hintergrundwissen zum Thema Prozessmodellierung ausgewählt, um zu prüfen, in wie fern sich die Ergebnisse bei den Verständnisfragen zwischen Personen mit viel und wenig Hintergrundwissen zum Thema Prozessmodellierung unterscheiden.\newline
 
 \begin{figure}[htp]
 \begin{center}
